limit main page to show at most 5 tasks per project

--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -217,14 +217,26 @@ body {
     position: relative;
     box-sizing: content-box;
     break-inside: avoid;
+    border: .5px solid rgb(215, 215, 215);
+    border-radius: 15px;
+    padding: 15px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    z-index: 1;
     background-color: #b9cde1;
+}
+
+/* .project-background {
+    position: relative;
+    box-sizing: content-box;
+    break-inside: avoid;
     border: .5px solid rgb(215, 215, 215);
     border-radius: 15px;
     padding: 15px;
     margin-bottom: 10px;
     cursor: pointer;
     z-index: 0;
-}
+} */
 
 .project:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
