--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -96,20 +96,21 @@ body {
 .task-status {
     display: flex;
     justify-content: space-between;
-    padding: 0 12px;
-    border-radius: 15px;
 }
 
 .normal {
-    background-color: #91b6b5;
+    color: #91b6b5;
+    font-weight: 600;
 }
 
 .priority {
-    background-color: #e7cd77;
+    color: #c6af63;
+    font-weight: 600;
 }
 
 .overrun {
-    background-color: #b4454c;
+    color: #b4454c;
+    font-weight: 600;
 }
 
 .personal-area img {
@@ -131,7 +132,7 @@ body {
     border-radius: 50%;
 }
 
-.image-cropper>img{
+.image-cropper>img {
     min-height: 150px;
     min-width: 150px;
     object-fit: cover;
@@ -145,7 +146,7 @@ body {
     width: auto; */
 }
 
-.image-cropper>svg{
+.image-cropper>svg {
     min-height: 150px;
     min-width: 150px;
     object-fit: cover;
@@ -176,7 +177,8 @@ body {
     display: none;
 }
 
-.project-area, .completed-project-area {
+.project-area,
+.completed-project-area {
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -205,7 +207,7 @@ body {
 
 .create-project:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
-  }
+}
 
 .center-image {
     display: flex;
@@ -256,7 +258,7 @@ body {
 
 .project:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
-  }
+}
 
 .project-name {
     display: flex;
@@ -284,7 +286,7 @@ body {
 .completed-project-area {
     display: flex;
     flex-direction: column;
-    border-left: 1px solid rgb(124, 124, 124);
+    /* border-left: 1px solid rgb(124, 124, 124); */
     padding-left: 15px;
     overflow: auto;
     min-width: 200px;
@@ -292,10 +294,15 @@ body {
     padding: 0 15px;
 }
 
+.completed-project-area::-webkit-scrollbar {
+    display: none;
+}
+
 .completed-project {
     display: flex;
     flex-direction: column;
     min-height: 150px;
+    max-height: 150px;
     margin-bottom: 10px;
     background-color: #cad0d0;
     color: #ffffff;
@@ -305,9 +312,21 @@ body {
     cursor: pointer;
 }
 
+.completed-project-title {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    text-align: center;
+    flex-wrap: wrap;
+    font-weight: 600;
+    font-size: 17px;
+    color: #a1a4a4;
+    margin-bottom: 10px;
+}
+
 .completed-project:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
-  }
+}
 
 .user-content-button-container {
     display: flex;
@@ -315,7 +334,8 @@ body {
     width: 100%;
 }
 
-.edit-profile, .update-password{
+.edit-profile,
+.update-password {
     background-color: #779b9a;
     border: none;
     height: 40px;
