--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -117,6 +117,7 @@ body {
 }
 
 .user-content .username {
+    text-align: center;
     margin: 15px 0;
     font-size: 25px;
     font-weight: 600;
