--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -50,8 +50,8 @@ body {
     align-items: center;
     background-color: #2d2d2d;
     /* border: .5px solid rgb(215, 215, 215); */
-    border-radius: 30px;
-    padding: 0 15px;
+    border-radius: 25px;
+    padding: 0 10px;
     margin-bottom: 20px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
@@ -359,18 +359,14 @@ body {
 .main-page {
     height: 30px;
     width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
     cursor: pointer;
     border: none;
-    border-radius: 15px;
+    padding-left: 15px;
 }
 
-.main-page:hover {
-    /* background-color: #8fd1cf; */
-    border: .5px solid #b8d3d2 !important;
-    color: #b8d3d2;
+.main-page > img {
+    height: 100%;
 }
 
 .update-password,
