--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -98,6 +98,11 @@ body {
 
 }
 
+.personal-area::-webkit-scrollbar {
+    display: none;
+}
+
+
 .task-status {
     display: flex;
     justify-content: space-between;
