add show password toggle in main page and login page

--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -143,6 +143,10 @@ body {
     border-radius: 50%;
 }
 
+.user-content-info div {
+    margin-bottom: 5px;
+}
+
 .image-cropper>img {
     min-height: 150px;
     min-width: 150px;
@@ -421,4 +425,8 @@ body {
     height: 40px;
     border-radius: 5px;
     margin-top: 5px;
+}
+
+.project-creation-body {
+    height: 330px;
 }
