--- a/private/mainPage/index.css
+++ b/private/mainPage/index.css
@@ -1,30 +1,4 @@
 body {
-    margin: 0;
-    padding: 1rem;
-  }
-  .columns {
-    max-width: 80vw;
-    margin: auto;
-    columns: 4 200px;
-    column-gap: 1rem;
-    font-size: 1.2rem;
-  }
-  .box {
-    /* background: red; */
-    color: white;
-    margin: 0 0 1rem;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-weight: bold;
-  }
-  .box:nth-child(odd) {
-    /* background: blue; */
-  }
-
-  
-
-body {
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
@@ -101,14 +75,6 @@ body {
 }
 
 .personal-area {
-    /* display: flex;
-    flex-direction: column;
-    border-right: 1px solid rgb(124, 124, 124);
-    padding: 0 15px;
-    justify-content: space-between;
-    max-height: auto;
-    min-width: 250px;
-    max-width: 250px; */
 
     display: flex;
     flex-direction: column;
@@ -202,17 +168,24 @@ body {
     width: auto; */
 }
 
-.project-area {
-    /* display: flex;
-    flex-direction: row;
-    padding: 0 15px;
-    gap: 10px;
-    width: calc(100% - 400px);
-    overflow-x: scroll; */
-    padding: 0 15px;
+.project-area-box{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-y: auto;
 }
 
-.project-area::-webkit-scrollbar {
+.project-area {
+    position: relative;
+    width: 100%;
+    padding: 15px;
+    column-count: 4;
+    column-gap: 15px;
+    overflow: auto;
+    padding: 0;
+}
+
+.project-area-box::-webkit-scrollbar {
     display: none;
 }
 
@@ -224,7 +197,6 @@ body {
 }
 
 .create-project {
-    /* box-sizing: content-box; */
     break-inside: avoid;
     display: flex;
     flex-direction: column;
@@ -236,11 +208,10 @@ body {
     border: .5px solid rgb(215, 215, 215);
     border-radius: 15px;
     padding: 15px;
-    margin-bottom: 10px;
-    min-width: 200px;
-    max-width: 200px;
-    min-height: 300px;
-    max-height: 300px;
+    margin-bottom: 15px;
+    width: 100%;
+    min-height: 350px;
+    max-height: 350px;
     cursor: pointer;
 }
 
@@ -257,22 +228,19 @@ body {
 }
 
 .center-image img {
-    max-width: 100%;
+    max-width: 150px;
+    width: 100%;
     /* max-height: 150px */
 }
 
 .project {
     position: relative;
-    /* display: inline-block; */
-    min-width: 200px;
-    max-width: 200px;
-
-    /* box-sizing: content-box; */
+    width: 100%;
     break-inside: avoid;
     border: .5px solid rgb(215, 215, 215);
     border-radius: 15px;
     padding: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     cursor: pointer;
     overflow-y: auto;
     z-index: 1;
@@ -284,17 +252,6 @@ body {
     display: none;
 }
 
-/* .project-background {
-    position: relative;
-    box-sizing: content-box;
-    break-inside: avoid;
-    border: .5px solid rgb(215, 215, 215);
-    border-radius: 15px;
-    padding: 15px
-    margin-bottom: 10px;
-    cursor: pointer;
-    z-index: 0;
-} */
 
 .project:hover {
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
@@ -461,4 +418,16 @@ body {
 
 .project-creation-body {
     height: 330px;
+}
+
+@media screen and (max-width: 1350px) {
+    .project-area {
+        column-count: 3;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .project-area {
+        column-count: 2;
+    }
 }
